--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -80,37 +80,37 @@ c1）在Redis缓存上储存初始化库存量，并设置初始化库存量为1
 
 使用Redis组件调用Redis方法putBucket(String name, Object value)新增通用对象，用于表示初始化的库存量，传入通用对象名stock以及通用对象参数值10即可，如图2-50、图2-51所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-50.png)
+![image](https://user-images.githubusercontent.com/79617492/177289572-e0da4625-b5a6-46cd-a74c-9c0de9d4a41b.png)
 
 ##### 图2-50 Redis组件【初始化库存数量10】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-51.png)
+![image](https://user-images.githubusercontent.com/79617492/177289610-dd08a2cd-23bd-4beb-95ba-1d3981eea801.png)
 
 ##### 图2-51 组件配置
 
 ##### 说明：此处用到的Redis方法类型为Bucket，专门用于操作通用对象，putBucket方法说明如图2-52所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-52.png)
+![image](https://user-images.githubusercontent.com/79617492/177289640-3215b0a0-6477-4256-b38c-b837f7b5743e.png)
 
 ##### 图2-52 putBucket方法说明
 
 c2）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上储存的初始化库存量，传入通用对象名stock即可，如图2-53、图2-54所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-53.png)
+![image](https://user-images.githubusercontent.com/79617492/177289666-60803f08-5633-411c-a418-c27321966814.png)
 
 ##### 图2-53 Redis缓存组件【获取初始化库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-54.png)
+![image](https://user-images.githubusercontent.com/79617492/177289689-944da5c3-3e84-48bf-bf03-717546c44f72.png)
 
 ##### 图2-54 组件配置
 
 c3）使用输出结果组件输出Redis缓存上储存的初始化库存量，传入Redis组件【获取初始化库存量】的执行结果即可，如图2-55、图2-56所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-55.png)
+![image](https://user-images.githubusercontent.com/79617492/177289728-c1ef7507-7582-4c8f-9ed7-bfe73f13273b.png)
 
 ##### 图2-55 输出结果【输出初始化库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-56.png)
+![image](https://user-images.githubusercontent.com/79617492/177289758-bc6277ba-01fd-468f-8a7f-79dda6bd98ab.png)
 
 ##### 图2-56 组件配置
 
@@ -118,31 +118,31 @@ d）测试初始化库存接口
 
 d1）流程图设计完成后，保存并退出窗体视图，如图2-57所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-57.png)
+![image](https://user-images.githubusercontent.com/79617492/177289803-6a1ec5ca-b7e9-48b5-8d39-f7d0f77e4c52.png)
 
 ##### 图2-57 保存并退出窗体
 
 d2）提交并发布接口，如图2-58所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-58.png)
+![image](https://user-images.githubusercontent.com/79617492/177289822-7a0e3ca7-6b70-47f0-bf3c-59732057a23f.png)
 
 ##### 图2-58 提交并发布接口
 
 d3）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-59所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-59.png)
+![image](https://user-images.githubusercontent.com/79617492/177289855-4671e075-90b4-4913-94c4-773b15705f03.png)
 
 ##### 图2-59 使用测试用例
 
 d4）执行测试用例，如图2-60所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-60.png)
+![image](https://user-images.githubusercontent.com/79617492/177289895-59c6a000-0125-489d-8bdb-1f0fff0731ff.png)
 
 ##### 图2-60 执行测试用例
 
 d5）通过测试用例响应内容查看接口的执行结果，data返回10说明此时Redis缓存上储存的库存数量为10，如图2-61所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-61.png)
+![image](https://user-images.githubusercontent.com/79617492/177289934-f11481bc-d6e1-4dc7-8e9d-42d640edd114.png)
 
 ##### 图2-61 查看执行结果
 
@@ -150,13 +150,13 @@ e）创建分布式锁接口
 
 e1）新增分布式锁接口，填写接口的基本信息，如图2-62所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-62.png)
+![image](https://user-images.githubusercontent.com/79617492/177289968-66f51cb1-047f-49f5-8be8-2eacb628a611.png)
 
 ##### 图2-62 填写基本信息
 
 e2）与初始化库存接口类似，分布式锁接口也不需要配置接口参数，直接进入窗体视图拖拽组件列表中的组件进行流程图的编辑，如图2-63所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-63.png)
+![image](https://user-images.githubusercontent.com/79617492/177290005-c8a6555a-4bb0-4817-8e88-4eb22ec976ba.png)
 
 ##### 图2-63 进行流程图编辑
 
@@ -164,83 +164,83 @@ f）分布式锁接口中组件的详细配置
 
 f1）使用单函数组件调用函数newMapInit(Object[] keyAndValue)构建分布式锁Map集合，需传入分布式锁参数名lockKey以及分布式锁参数值product_001，如图2-64所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-64.png)
+![image](https://user-images.githubusercontent.com/79617492/177290034-a1e8b59e-32df-4ea5-82fb-303d6d9aba8a.png)
 
 ##### 图2-64 单函数组件【构建分布式锁名】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-65.png)
+![image](https://user-images.githubusercontent.com/79617492/177290074-a275bc56-16c0-4094-adca-58b470d68f8a.png)
 
 ##### 图2-65 组件配置
 
 f2）使用Redis组件中调用Redis方法lock(String lockName, long leaseTime, TimeUnit unit)用于上锁并设置超时释放时间，需传入上一步构建的分布式锁Map集合，即单函数组件【构建分布式锁名】的执行结果，以及超时时间数和时间单位，本实例设置的超时释放时间为2秒，如图2-66、图2-67所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-66.png)
+![image](https://user-images.githubusercontent.com/79617492/177290101-1ca60912-416b-47df-8c4f-93441605d17a.png)
 
 ##### 图2-66 Redis组件【上锁，超时释放】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-67.png)
+![image](https://user-images.githubusercontent.com/79617492/177290127-a4e4bf25-8755-431d-b657-fa69d0790b45.png)
 
 ##### 图2-67 组件配置
 
 f3）使用Redis组件调用Redis方法getBucket(String name)获取Redis缓存上存储的当前库存量，传入初始化库存接口中创建的通用对象stock即可，如图2-68、图2-69所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-68.png)
+![image](https://user-images.githubusercontent.com/79617492/177290158-ba278a18-010f-4115-8371-56f53e533e45.png)
 
 ##### 图2-68 Redis缓存组件【获取当前库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-69.png)
+![image](https://user-images.githubusercontent.com/79617492/177290179-c1db7101-e6ac-4ae8-b279-d4755c4bd0ce.png)
 
 ##### 图2-69 组件配置
 
 f4）使用互斥条件组件判断上一步【获取当前库存量】是否小于等于0，若小于等于0，说明库存量不足，则输出库存不足结束流程；若大于0，说明库存量充足，则继续以下流程，如图2-70、图2-71、图2-72、图2-73、图2-74所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-70.png)
+![image](https://user-images.githubusercontent.com/79617492/177290213-5d4896e1-e8cf-4817-92eb-28a9e3494291.png)
 
 ##### 图2-70【是否有库存】流程
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-71.png)
+![image](https://user-images.githubusercontent.com/79617492/177290236-343fd9b6-3d96-4e2a-a5ce-2a2034c87d98.png)
 
 ##### 图2-71 小于等于0时流转条件
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-72.png)
+![image](https://user-images.githubusercontent.com/79617492/177290263-65706730-4ff5-4f49-8096-7c0b703bebca.png)
 
 ##### 图2-72 输出结果组件【库存不足】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-73.png)
+![image](https://user-images.githubusercontent.com/79617492/177290278-9f347ca0-fa69-4c2f-8f44-fc25c4e95d27.png)
 
 ##### 图2-73 输出库存不足信息
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-74.png)
+![image](https://user-images.githubusercontent.com/79617492/177290312-c45ef2e3-f80e-4867-9a31-6a9f5fdbb123.png)
 
 ##### 图2-74 大于0时流转条件
 
 f5）使用Redis组件调用Redis方法putBucket(String name, Object value) 将当前库存量减1，并更新Redis缓存上存储的库存量，需传入通用对象名stock以及步骤3中Redis组件【获取当前库存量】的执行结果减1，如图2-75、图2-76所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-75.png)
+![image](https://user-images.githubusercontent.com/79617492/177290358-3bb1a5b9-1cec-4beb-bd64-386b9ba654f0.png)
 
 ##### 图2-75 Redis组件【更新库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-76.png)
+![image](https://user-images.githubusercontent.com/79617492/177290383-c9773398-df4a-45d3-981b-4b0a30d7e1b1.png)
 
 ##### 图2-76 组件配置
 
 f6）使用Redis组件调用Redis方法getBucket(String name)获取更新后的库存量，传入在Redis缓存上储存的库存量值stock即可，如图2-77、图2-78所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-77.png)
+![image](https://user-images.githubusercontent.com/79617492/177290410-448bb87d-af73-4cfe-a326-33c1b9064f16.png)
 
 ##### 图2-77 Redis组件【获取当前库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-78.png)
+![image](https://user-images.githubusercontent.com/79617492/177290462-36aa5bba-ae2c-4c69-bb30-c642d485da05.png)
 
 ##### 图2-78 组件配置
 
 f7）使用输出结果组件输出更新后的库存量，传入上一步Redis组件【获取当前库存量】的执行结果即可，如图2-79、图2-80所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-79.png)
+![image](https://user-images.githubusercontent.com/79617492/177290485-903eb86c-3df6-40d1-8d27-df490c659ba7.png)
 
 ##### 图2-79 输出结果【输出现存库存量】
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-80.png)
+![image](https://user-images.githubusercontent.com/79617492/177290515-b369d074-01d4-4d1d-9de7-35299a2af86a.png)
 
 ##### 图2-80 输出提示信息
 
@@ -254,19 +254,19 @@ g3）对接口进行测试用例，检验接口实现的功能是否可以达到
 
 g4）编辑测试用例，如图2-81所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-81.png)
+![image](https://user-images.githubusercontent.com/79617492/177290560-3aa1c581-3571-411c-8e56-6136b1365592.png)
 
 ##### 图2-81 编辑测试用例
 
 g5）启用可视化日志（便于查看接口流程中的数据流转），单击执行即可，如图2-82所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-82.png)
+![image](https://user-images.githubusercontent.com/79617492/177290580-dc854346-9458-40d9-9fab-2d19fc0eac99.png)
 
 ##### 图2-82 启用可视化日志
 
 g6）通过测试用例详情页面的响应内容查看接口的执行结果，若当前库存充足时，返回调用成功以及当前库存数量，如图2-83所示；若当前库存不足，返回库存不足输出结果，如图2-84所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-83.png)
+![image](https://user-images.githubusercontent.com/79617492/177290620-658cb2b5-a349-4b07-85b7-417c10616c6e.png)
 
 ##### 图2-83 库存充足的结果
 
