--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -270,21 +270,21 @@ g6）通过测试用例详情页面的响应内容查看接口的执行结果，
 
 ##### 图2-83 库存充足的结果
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-84.png)
+![image](https://user-images.githubusercontent.com/79617492/177290986-ffdd2fa2-8ba6-4887-b065-ec0d51a56a38.png)
 
 ##### 图2-84 库存不足的结果
 
 g7）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-85所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-85.png)
+![image](https://user-images.githubusercontent.com/79617492/177291010-e2de1df7-0f0c-4639-a361-19274e5f885e.png)
 
 ##### 图2-85 选择可视化日志
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-86.png)
+![image](https://user-images.githubusercontent.com/79617492/177291028-ed1ab408-2414-461b-9a2a-082c1e5e8130.png)
 
 ##### 图2-86 查看可视化日志
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-87.png)
+![image](https://user-images.githubusercontent.com/79617492/177291061-e031bcbb-5dbd-4a08-8198-135aab9197ba.png)
 
 ##### 图2-87 查看节点数据
 
@@ -304,7 +304,7 @@ b）关联全自动开发平台的项目和接口
 
 b1）单击全自动测试平台页面上方“测试场景 > 接口管理”选项，选择“关联项目”，如图2-88所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-88.png)
+![image](https://user-images.githubusercontent.com/79617492/177291104-8e8133fc-8ff0-4252-8472-6595eb556107.png)
 
 ##### 图2-88 选择“关联项目”
 
@@ -312,13 +312,13 @@ b2）查询所需关联项目，单击“关联”即可，如图2-89所示：
 
 ##### 说明：本实例使用到的项目名称为test2，您在操作时需根据实际需求选择关联。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-89.png)
+![image](https://user-images.githubusercontent.com/79617492/177291150-66c32f5b-1cc2-409b-ad25-86366d6ba356.png)
 
 ##### 图2-89 关联所需项目
 
 b3）关联成功后，您可以看到对应项目及所有的接口信息显示在接口管理页面，如图2-90所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-90.png)
+![image](https://user-images.githubusercontent.com/79617492/177291172-2a5e147f-a0f0-4aed-8696-f7c96c697e3c.png)
 
 ##### 图2-90 查看接口信息
 
@@ -326,7 +326,7 @@ b4）进入初始化库存接口详情页面，选择好环境配置后，单击
 
 ##### 说明：对初始化库存接口进行测试后，最好单击一下保存，以免下次执行时需重新选择，您也可以在全自动测试平台对该接口执行测试用例以初始化库存。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-91.png)
+![image](https://user-images.githubusercontent.com/79617492/177291192-92f69fb0-3991-4873-9ec8-036dc11c2b39.png)
 
 ##### 图2-91 选择好环境配置
 
@@ -334,37 +334,37 @@ c）创建分布式锁测试用例
 
 c1）新增测试用例模块，如图2-92所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-92.png)
+![image](https://user-images.githubusercontent.com/79617492/177291230-15b04521-b7b8-474d-895d-803f14194802.png)
 
 ##### 图2-92 新增测试用例模块
 
 c2）在对应的测试用例模块下，新增测试用例，如图2-93所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-93.png)
+![image](https://user-images.githubusercontent.com/79617492/177291253-8669b9ef-636d-4922-9192-c087f1e32eca.png)
 
 ##### 图2-93 新增测试用例
 
 c3）填写测试用例详细信息，如图2-94所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-94.png)
+![image](https://user-images.githubusercontent.com/79617492/177291274-ded84f78-83f7-4277-b02b-2f068d749cce.png)
 
 ##### 图2-94 填写测试用例信息
 
 c4）提交测试用例，如图2-95所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-95.png)
+![image](https://user-images.githubusercontent.com/79617492/177291295-af61e4f5-6f1f-4ca1-bc73-211147228331.png)
 
 ##### 图2-95 提交测试用例
 
 c5）评审测试用例，如图2-96所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-96.png)
+![image](https://user-images.githubusercontent.com/79617492/177291312-1df25c77-bb6d-48a2-add7-144585955936.png)
 
 ##### 图2-96 评审测试用例
 
 c6）评审通过后，单击“提交”即可，如图2-97所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-97.png)
+![image](https://user-images.githubusercontent.com/79617492/177291326-c9743837-62e0-4b5c-b43d-42f03d69f50c.png)
 
 ##### 图2-97 通过评审
 
@@ -372,29 +372,29 @@ d）新增分布式锁测试场景
 
 d1）新增测试场景，填写基本信息，如图2-98所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-98.png)
+![image](https://user-images.githubusercontent.com/79617492/177291344-bc136d47-cb0e-4b52-a261-5481653e0372.png)
 
 ##### 图2-98 新增测试场景
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-99.png)
+![image](https://user-images.githubusercontent.com/79617492/177291373-39c64abb-6013-4a3c-b3b2-a193b4163447.png)
 
 ##### 图2-99 填写基本信息
 
 d2）在根测试场景下创建场景组，如图2-100所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-100.png)
+![image](https://user-images.githubusercontent.com/79617492/177291408-0fccac06-777d-4e10-b017-c286fe9e1809.png)
 
 ##### 图2-100 创建场景组
 
 d3）为场景组绑定接口，如图2-101所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-101.png)
+![image](https://user-images.githubusercontent.com/79617492/177291427-6f988bd9-df5e-4dec-a62b-bea46e01e0a8.png)
 
 ##### 图2-101 绑定接口
 
 d4）选择“分布式锁”接口，如图2-102所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-102.png)
+![image](https://user-images.githubusercontent.com/79617492/177291463-8a67becb-23a1-4a88-909d-55fa67fa8cd9.png)
 
 ##### 图2-102 选择“分布式锁”接口
 
