--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/2. 基于Redis的分布式锁实现.md
@@ -402,11 +402,11 @@ d5）设置断言。
 
 ##### 说明：断言用于设置条件对接口返回的数据进行检查，看是否可以通过设置的条件。断言因接口返回数据类型的不同也分为不同的类型，此处选择的是JSON断言，用于判断分布式锁接口返回的msg字段是否为“调用成功!”。若为“调用成功!”，则说明库存充足，用户请求成功，否则说明库存不足，用户请求失败。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-103.png)
+![image](https://user-images.githubusercontent.com/79617492/177291619-db8a2a19-a39a-46e1-ac19-19b19504d96c.png)
 
 ##### 图2-103 选择JSON断言
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-104.png)
+![image](https://user-images.githubusercontent.com/79617492/177291640-74a50894-688b-483f-8461-cb4d3a5e4aa9.png)
 
 ##### 图2-104 设置断言
 
@@ -418,26 +418,27 @@ e）进行并发性能测试
 
 e1）进入性能测试页面，创建性能测试，如图2-105所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-105.png)
+![image](https://user-images.githubusercontent.com/79617492/177291655-ca1fea63-aafe-4697-933c-ecfc116a199b.png)
 
 ##### 图2-105 创建性能测试
 
 e2）填写性能测试基本信息，选择可用的环境和资源池，导入测试用例，如图2-106所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-106.png)
+![image](https://user-images.githubusercontent.com/79617492/177291671-8a08c955-945f-40f5-8b2d-f21f960606d5.png)
 
 ##### 图2-106 导入测试用例
 
 e3）选择创建的分布式锁测试用例，可以看到该测试用例绑定了分布式锁测试场景，如图2-107所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-107.png)
+![image](https://user-images.githubusercontent.com/79617492/177291729-35c35ce7-a49e-4237-9dc1-5234bbcdcfb1.png)
+
 ##### 图2-107 选择创建的用例
 
 e4）设置并发用户数，并选择按持续时间或循环次数进行测试，如图2-108所示：
 
 ##### 说明：因为本实例设置的初始化库存数量为10，此处我们设置12个并发用户数来展示分布式锁效果，同时设置这12个并发用户分别只执行一次分布式锁测试场景（即循环次数为1次），且这12个并发用户需要在1秒内全部生成（即在1秒内增加并发用户）。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-108.png)
+![image](https://user-images.githubusercontent.com/79617492/177291770-fee19c4a-0407-4257-8ae8-0fa55d3726e8.png)
 
 ##### 图2-108 设置参数
 
@@ -445,7 +446,7 @@ e5）创建性能测试完成后，单击“保存”。
 
 e6）执行性能测试，如图2-109所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-109.png)
+![image](https://user-images.githubusercontent.com/79617492/177291809-d610953f-5acd-4fa5-b1ed-806c395f905b.png)
 
 ##### 图2-109 执行性能测试
 
@@ -455,18 +456,18 @@ f）查看分布式锁性能测试报告
 
 f1）选择测试报告，如图2-110所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-110.png)
+![image](https://user-images.githubusercontent.com/79617492/177291847-22203e27-8298-4889-abd2-e436c19db1cf.png)
 
 ##### 图2-110 选择测试报告
 
 f2）单击“详情”，如图2-111所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-111.png)
+![image](https://user-images.githubusercontent.com/79617492/177291868-155f45bf-cf3f-4e12-b1f5-6551af34d400.png)
 
 ##### 图2-111 单击“详情”
 
 f3）查看测试报告详情，报告详情包含压力配置、测试概览、请求统计、错误记录以及监控详情5个部分的数据信息，我们可以在错误记录部分看到此次并发测试发送了12次请求，其中有两次请求因库存不足请求失败，如图2-112所示：
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E6%A1%88%E4%BE%8B%E5%9C%BA%E6%99%AF/2.%20%E5%B8%B8%E8%A7%81%E6%A1%88%E4%BE%8B/2.%20%E7%94%B5%E5%95%86%E5%B9%B3%E5%8F%B0%E5%BA%94%E7%94%A8/2-112.png)
+![image](https://user-images.githubusercontent.com/79617492/177291899-a5fd7f83-076d-4de5-a482-2a7936d160c9.png)
 
 ##### 图2-112 查看测试报告详情
