--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -6,23 +6,23 @@
 
 ##### 2.3.1 效果展示
 
-新增商品秒杀活动时，一般是在如图2-111所示的前端页面录入秒杀活动信息后，通过多重判断来确定是否新增秒杀活动信息（即开启秒杀活动）。由于本案例仅针对后端程序进行开发，录入秒杀活动信息由全自动开发平台测试用例页面直接录入对应的秒杀活动信息即可，如图2-112所示。最后通过测试用例执行结果是否成功以及数据库中秒杀表是否新增记录来判断功能实现结果，如图2-113、2-114所示：
+新增商品秒杀活动时，一般是在如图2-113所示的前端页面录入秒杀活动信息后，通过多重判断来确定是否新增秒杀活动信息（即开启秒杀活动）。由于本案例仅针对后端程序进行开发，录入秒杀活动信息由全自动开发平台测试用例页面直接录入对应的秒杀活动信息即可，如图2-114所示。最后通过测试用例执行结果是否成功以及数据库中秒杀表是否新增记录来判断功能实现结果，如图2-115、2-116所示：
 
-![2-111](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_1.jpg)
+![image](https://user-images.githubusercontent.com/79617492/177518762-a3963f7c-4960-4b93-b4c9-0590cb26c221.png)
 
-##### 图2-111 前端页面
+##### 图2-113 前端页面
 
-![2-112](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177518825-633dab5d-455f-4205-b130-0dc4ae652784.png)
 
-##### 图2-112 全自动开发平台参数录入界面
+##### 图2-114 全自动开发平台参数录入界面
 
-![2-113](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177518943-4666c958-355b-440f-8970-b0c1518fa4d0.png)
 
-##### 图2-113 测试用例执行结果
+##### 图2-115 测试用例执行结果
 
-![2-114](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/2_4.png)
+![image](https://user-images.githubusercontent.com/79617492/177518990-ab1e963b-345b-4239-8101-0bf5640dce8f.png)
 
-##### 图2-114 秒杀表新增记录
+##### 图2-116 秒杀表新增记录
 
 ##### 2.3.2 准备工作
 
@@ -56,17 +56,17 @@
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='商品表';
 ```
 
-![2-115](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177519037-ed5fc39f-90ec-41c2-a70b-a414f324f7a1.png)
 
-##### 图2-115 商品表参数1
+##### 图2-117 商品表参数1
 
-![2-116](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177519056-5c6eea3a-24d4-4d11-a275-3d6e4ff96bac.png)
 
-##### 图2-116 商品表参数2
+##### 图2-118 商品表参数2
 
-![2-117](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177519083-4af38306-80d1-4bfd-a376-e0865c68b642.png)
 
-##### 图2-117 商品表参数3
+##### 图2-119 商品表参数3
 
 ##### 说明：商品表中的配置信息可自行设置。
 
@@ -92,21 +92,21 @@ CREATE TABLE `seckill_buy` (
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='秒杀表';
 ```
 
-![2-118](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/3_4.png)
+![image](https://user-images.githubusercontent.com/79617492/177519125-fc689c27-89d4-452a-a6aa-ca18e637de9b.png)
 
-##### 图2-118 秒杀表参数3
+##### 图2-120 秒杀表参数3
 
 ##### 说明：秒杀表数据在调用接口后自动生成。
 
 ##### 2.3.3 流程图设计概览
 
-![2-119](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/4_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177519146-554df08f-461e-4bd5-bc4a-dd9d29e256f7.png)
 
-##### 图2-119 接口流程图（上）
+##### 图2-121 接口流程图（上）
 
-![2-120](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/4_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177519168-7bf3c045-aa41-42be-9cc2-2c2c804e1919.png)
 
-##### 图2-120 接口流程图（下）
+##### 图2-122 接口流程图（下）
 
 逻辑描述：
 
@@ -134,59 +134,47 @@ j）新增《秒杀表》执行成功的数量。
 
 a）创建实体模型- SeckillBuy
 
-进入全自动开发平台“实体模型”功能模块，创建一个实体模型SeckillBuy，用来赋值商品秒杀活动信息，操作过程及实体模型设计如图2-121、图2-122、图2-123、图2-124所示：
+进入全自动开发平台“实体模型”功能模块，创建一个实体模型SeckillBuy，用来赋值商品秒杀活动信息，操作过程及实体模型设计如图2-123、图2-124、图2-125、图2-126所示：
 
-![2-121](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177519616-39cffdf9-df1e-413b-b72f-694a084a4ebb.png)
 
-##### 图2-121 实体模型功能模块
+##### 图2-123 实体模型功能模块
 
-![2-122](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177519637-1564cd51-fc68-4c0b-8474-aff0ddf52ab9.png)
 
-##### 图2-122 实体模型设置
+##### 图2-124 实体模型设置
 
-![2-123](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177519662-3a08346b-c99f-490e-b551-6a2fbdb8deb6.png)
 
-##### 图2-123 实体模型设置1
+##### 图2-125 实体模型设置1
 
-![2-124](../../../../images/%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E5%AD%97%E6%AE%B5%E6%8F%8F%E8%BF%B0.PNG)
+![image](https://user-images.githubusercontent.com/79617492/177519699-5da24b67-7a66-4e72-912a-4e46d5fb0019.png)
 
-##### 图2-124 实体模型字段描述
+##### 图2-126 实体模型字段描述
 
 b）新增商品秒杀活动接口
 
-进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图2-125、图2-126所示：
+进入全自动开发平台“接口管理”功能模块，新增接口模块并新增一个接口，填写接口的基本信息，如图2-127、图2-128所示：
 
-![2-125](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_5.png)
+![image](https://user-images.githubusercontent.com/79617492/177519729-9d1b57aa-b43f-4654-ac77-1d2a044714c6.png)
 
-##### 图2-125 接口模型功能模块
+##### 图2-127 接口模型功能模块
 
-![2-126](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_6.png)
+![image](https://user-images.githubusercontent.com/79617492/177519754-c0ac9e52-b151-4739-84c3-2651c50b4c30.png)
 
-##### 图2-126 填写接口基本信息
+##### 图2-128 填写接口基本信息
 
 c）配置接口的入口参数
 
-本实例需要配置接口参数，用于录入商品秒杀相关信息，如图2-127、图2-128所示：
+本实例需要配置接口参数，用于录入商品秒杀相关信息，如图2-129、图2-130所示：
 
-![2-127](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_7.png)
+![image](https://user-images.githubusercontent.com/79617492/177519822-18935313-3364-4585-8639-a9aaa751ce39.png)
 
-##### 图2-127 配置body参数
+##### 图2-129 配置body参数
 
-![2-128](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_8.png)
+![image](https://user-images.githubusercontent.com/79617492/177519851-d01be24e-1559-4969-ac5b-0b67f1b211bb.png)
 
-##### 图2-128 配置头部参数
-
-d）模型编辑
-
-通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图2-129，图2-130所示：
-
-![2-129](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_9.png)
-
-##### 图2-129 进入模型编辑
-
-![2-130](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_10.png)
-
-##### 图2-130 组件列表
+##### 图2-130 配置头部参数
 
 ##### 2.3.5 组件的具体配置（按逻辑描述展示）
 
