--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/3. 新增商品秒杀活动.md
@@ -176,240 +176,252 @@ c）配置接口的入口参数
 
 ##### 图2-130 配置头部参数
 
+d）模型编辑
+
+通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图2-131，图2-132所示：
+
+![image](https://user-images.githubusercontent.com/79617492/177679943-6cc3a7ae-a41c-4c92-a695-dd83fb6a6c0f.png)
+
+##### 图2-131 进入模型编辑
+
+![image](https://user-images.githubusercontent.com/79617492/177679952-11a97794-9e0b-4f8a-af36-8ce5411bcb1b.png)
+
+##### 图2-132 组件列表
+
 ##### 2.3.5 组件的具体配置（按逻辑描述展示）
 
 a）单SQl组件【查询《商品表》】
 
-根据商品编号查询《商品表》，需传入接口参数，如图2-131、图2-132、图2-133所示：
+根据商品编号查询《商品表》，需传入接口参数，如图2-133、图2-134、图2-135所示：
 
-![2-131](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_11.png)
+![image](https://user-images.githubusercontent.com/79617492/177679965-1b3c4afb-be6e-4d52-9f91-2a6851239f2d.png)
 
-##### 图2-131 单SQl组件【查询《商品表》】
+##### 图2-133 单SQl组件【查询《商品表》】
 
-![2-132](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_12.png)
+![image](https://user-images.githubusercontent.com/79617492/177679981-5d5a3529-ca37-458b-bd33-d5344105920c.png)
 
-##### 图2-132 组件配置
+##### 图2-134 组件配置
 
-![2-133](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_13.png)
+![image](https://user-images.githubusercontent.com/79617492/177679992-c6594fd0-4c27-4ae2-8ee6-7f0969a27313.png)
 
-##### 图2-133 SQL内容
+##### 图2-135 SQL内容
 
 b）互斥组件【判断商品信息是否为空】
 
-根据单SQL组件【查询《商品表》】的执行结果判断指定商品编号的商品信息是否为空，若为空，则输出“该商品信息不存在”信息，结束流程；若不为空，则进行下面流程，如图2-134、图2-135、图2-136、图2-137所示：
+根据单SQL组件【查询《商品表》】的执行结果判断指定商品编号的商品信息是否为空，若为空，则输出“该商品信息不存在”信息，结束流程；若不为空，则进行下面流程，如图2-136、图2-137、图2-138、图2-139所示：
 
-![2-134](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_14.png)
+![image](https://user-images.githubusercontent.com/79617492/177680016-c12f3819-e72c-4c5a-b566-cbb7b627e9cd.png)
 
-##### 图2-134【判断商品信息是否为空】流程
+##### 图2-136【判断商品信息是否为空】流程
 
-![2-135](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_15.png)
+![image](https://user-images.githubusercontent.com/79617492/177680028-16ecaf12-c3f8-4f1d-8391-30bff9a4359f.png)
 
-##### 图2-135 为空时流转条件
+##### 图2-137 为空时流转条件
 
-![2-136](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_16.png)
+![image](https://user-images.githubusercontent.com/79617492/177680038-b91aa860-0598-4c02-b488-f3ff9f2b9892.png)
 
-##### 图2-136 输出商品不存在信息
+##### 图2-138 输出商品不存在信息
 
-![2-137](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_17.png)
+![image](https://user-images.githubusercontent.com/79617492/177680056-0eec738c-7028-4178-a4d9-08c8508a7d2d.png)
 
-##### 图2-137 不为空时流转条件
+##### 图2-139 不为空时流转条件
 
 c）单函数【获取当前时间】
 
-调用自定义函数getCurrDateTime()，获取当前系统时间，如图2-138、图2-139所示：
+调用自定义函数getCurrDateTime()，获取当前系统时间，如图2-140、图2-141所示：
 
-![2-138](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_18.png)
+![image](https://user-images.githubusercontent.com/79617492/177680065-304167c9-4917-4cc2-a423-429034d56abe.png)
 
-##### 图2-138 单函数【获取当前时间】
+##### 图2-140 单函数【获取当前时间】
 
-![2-139](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_19.png)
+![image](https://user-images.githubusercontent.com/79617492/177680077-9964db48-8635-40bf-a3b5-0f6b01b6581a.png)
 
-##### 图2-139 组件配置
+##### 图2-141 组件配置
 
 d）互斥条件组件【判断秒杀开始时间是否小于当前时间】
 
-通过比较接口入参中的秒杀开始时间和单函数组件【获取当前系统时间】的执行结果，形成两条顺序流。若开始时间小于等于当前时间，则输出提示：“活动开始日期必须大于当前时间”，结束流程；若开始时间大于当前时间，则进入以下流程，如图2-141、图2-142所示：
+通过比较接口入参中的秒杀开始时间和单函数组件【获取当前系统时间】的执行结果，形成两条顺序流。若开始时间小于等于当前时间，则输出提示：“活动开始日期必须大于当前时间”，结束流程；若开始时间大于当前时间，则进入以下流程，如图2-142、图2-143所示：
 
-![2-141](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_20.png)
+![image](https://user-images.githubusercontent.com/79617492/177680101-8089935c-dd80-407e-a944-9cf66c7e18f7.png)
 
-##### 图2-141 【判断秒杀开始时间是否小于当前时间】流程
+##### 图2-142 【判断秒杀开始时间是否小于当前时间】流程
 
-![2-142](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_21.png)
+![image](https://user-images.githubusercontent.com/79617492/177680126-09db3371-89a9-4dfa-8661-662458ebd037.png)
 
-##### 图2-142 小于等于时流转条件
+##### 图2-143 小于等于时流转条件
 
-![2-143](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_22.png)
+![image](https://user-images.githubusercontent.com/79617492/177680154-265fe35b-5504-498c-864e-c66e8c389b38.png)
 
-##### 图2-143 输出提示信息
+##### 图2-144 输出提示信息
 
-![2-144](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_23.png)
+![image](https://user-images.githubusercontent.com/79617492/177680172-43548d28-1e18-494a-b4b9-bf72d9fb240b.png)
 
-##### 图2-144 大于时流转条件
+##### 图2-145 大于时流转条件
 
 e）互斥条件组件【判断开始时间是否小于结束时间】
 
-通过比较接口入参中的秒杀开始时间和秒杀结束时间，形成两条顺序流。若开始时间大于等于结束时间，则输出提示：“活动开始日期不能大于结束日期”，结束流程；若开始时间小于结束时间，则进入以下流程，如图2-145、图2-146、图2-147、图2-148所示：
+通过比较接口入参中的秒杀开始时间和秒杀结束时间，形成两条顺序流。若开始时间大于等于结束时间，则输出提示：“活动开始日期不能大于结束日期”，结束流程；若开始时间小于结束时间，则进入以下流程，如图2-146、图2-147、图2-148、图2-149所示：
 
-![2-145](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_24.png)
+![image](https://user-images.githubusercontent.com/79617492/177680201-36b4fcb7-45db-4016-a470-b0689e51f08b.png)
 
-##### 图2-145【判断开始时间是否小于结束时间】
+##### 图2-146【判断开始时间是否小于结束时间】
 
-![2-146](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_25.png)
+![image](https://user-images.githubusercontent.com/79617492/177680232-26748451-918e-4200-aa59-b34d97542abd.png)
 
-##### 图2-146 大于等于时流转条件
+##### 图2-147 大于等于时流转条件
 
-![2-147](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_26.png)
+![image](https://user-images.githubusercontent.com/79617492/177680256-f64d7f75-27eb-45dc-9f0e-5928e06a29e1.png)
 
-##### 图2-147 输出提示信息
+##### 图2-148 输出提示信息
 
-![2-148](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_27.png)
+![image](https://user-images.githubusercontent.com/79617492/177680279-6f5cfb85-8a03-4597-b3c1-d0d0a638b22c.png)
 
-##### 图2-148 小于时流转条件
+##### 图2-149 小于时流转条件
 
 f）互斥条件组件【判断限购数量是否大于0】
 
-通过判断接口入参中的限购数量是否大于0，形成两条顺序流。若限购数量小于或者等于0，则输出提示：“限购数量必须大于0”，若限购数量大于0则进入其他流程，如图2-149所示：
+通过判断接口入参中的限购数量是否大于0，形成两条顺序流。若限购数量小于或者等于0，则输出提示：“限购数量必须大于0”，若限购数量大于0则进入其他流程，如图2-150所示：
 
-![2-149](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_28.png)
+![image](https://user-images.githubusercontent.com/79617492/177680322-e3e07886-a03c-42a1-941a-e94f6e30ce21.png)
 
-##### 图2-149【判断限购数量是否大于0】流程
+##### 图2-150【判断限购数量是否大于0】流程
 
-![2-150](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_29.png)
+![image](https://user-images.githubusercontent.com/79617492/177680362-59631cb9-6a3c-4a64-92d3-0a46cf542628.png)
 
-##### 图2-150 小于等于0时流转条件
+##### 图2-151 小于等于0时流转条件
 
-![2-151](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_30.png)
+![image](https://user-images.githubusercontent.com/79617492/177680453-d6ecd89b-1026-48e5-bcd0-7763510d658d.png)
 
-##### 图2-151 输出提示信息
+##### 图2-152 输出提示信息
 
-![2-152](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_31.png)
+![image](https://user-images.githubusercontent.com/79617492/177680491-8d05342e-a3bd-469e-be2f-f85f8a439546.png)
 
-##### 图2-152 大于0流转条件
+##### 图2-153 大于0流转条件
 
 g）互斥条件组件【判断秒杀价格是否大于0】
 
-通过判断接口入参中的秒杀价格是否大于0，形成两条顺序流。若秒杀价格小于等于0，则输出提示：“秒杀价格必须大于0”，结束流程；若秒杀价格大于0，则进入以下流程，如图2-153、如图2-154、图2-155、图2-156所示：
+通过判断接口入参中的秒杀价格是否大于0，形成两条顺序流。若秒杀价格小于等于0，则输出提示：“秒杀价格必须大于0”，结束流程；若秒杀价格大于0，则进入以下流程，如图2-154、如图2-155、图2-156、图2-157所示：
 
-![2-153](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_32.png)
+![image](https://user-images.githubusercontent.com/79617492/177680510-90effe61-2c33-4d01-b11f-e98accb37c25.png)
 
-##### 图2-153【判断秒杀价格是否大于0】流程
+##### 图2-154【判断秒杀价格是否大于0】流程
 
-![2-154](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_33.png)
+![image](https://user-images.githubusercontent.com/79617492/177680520-b8edf71d-9cea-445a-8bc2-f1fd0c9f3d6d.png)
 
-##### 图2-154 小于等于0时流转条件
+##### 图2-155 小于等于0时流转条件
 
-![2-155](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_34.png)
+![image](https://user-images.githubusercontent.com/79617492/177680548-bbb0c6e7-65ae-4a3b-9112-c5e95e186246.png)
 
-##### 图2-155 输出提示信息
+##### 图2-156 输出提示信息
 
-![2-156](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_35.png)
+![image](https://user-images.githubusercontent.com/79617492/177680562-99501743-790e-44a7-bf08-a87066acecfc.png)
 
-##### 图2-156 大于0时流转条件
+##### 图2-157 大于0时流转条件
 
 h）赋值组件【赋值秒杀表数据】
 
-为实体模型SeckillBuy赋值秒杀表所需要的数据参数，如图2-157、图2-158、图2-159所示：
+为实体模型SeckillBuy赋值秒杀表所需要的数据参数，如图2-158、图2-159、图2-160所示：
 
-![2-157](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_36.png)
+![image](https://user-images.githubusercontent.com/79617492/177680587-a14a29b8-ebec-46b6-9fe6-db8fb0c1c19b.png)
 
-##### 图2-157 赋值组件【赋值秒杀表数据】
+##### 图2-158 赋值组件【赋值秒杀表数据】
 
-![2-158](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_37.png)
-
-##### 图2-158 数据模型选择SeckillBuy实体模型
-
-![2-159](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_38.png)
+![image](https://user-images.githubusercontent.com/79617492/177680607-f0e60a7d-c119-4403-ba3b-74c7db23e96d.png)
 
 ##### 图2-159 数据模型选择SeckillBuy实体模型
+
+![image](https://user-images.githubusercontent.com/79617492/177680623-c4415279-ddd8-4450-aa8d-fcce3fe2f073.png)
+
+##### 图2-160 数据模型选择SeckillBuy实体模型
 
 ##### 说明：其中seckillBuyId（秒杀编号）通过调用函数getUuid()获取24位随机编号；seckillBuyStatus（秒杀状态）填写1，表示秒杀活动待开启；remainAmount（商品剩余数量）通过引用单SQL组件【查询《商品表》】的查询结果中的remainAmount对应的参数值获取；createTime（创建时间）通过调用函数getCurrDateTime()，获取当前系统时间；其余参数均引用对应的接口参数即可。
 
 i）单SQL组件【新增《秒杀表》】
 
-将赋值组件【赋值秒杀表数据】赋值的数据新增一条秒杀活动记录到数据库的《秒杀表》中，如图2-160、图2-161、图2-162所示：
+将赋值组件【赋值秒杀表数据】赋值的数据新增一条秒杀活动记录到数据库的《秒杀表》中，如图2-161、图2-162、图2-163所示：
 
-![2-160](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_39.png)
+![image](https://user-images.githubusercontent.com/79617492/177680654-b6e1fefe-f90d-40a4-97ac-0fb295298fbb.png)
 
-##### 图2-160 单SQL组件【新增《秒杀表》】
+##### 图2-161 单SQL组件【新增《秒杀表》】
 
-![2-161](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_40.png)
+![image](https://user-images.githubusercontent.com/79617492/177680668-cef75dc9-36fa-45d1-861a-e081c1c53c33.png)
 
-##### 图2-161 组件配置
+##### 图2-162 组件配置
 
-![2-162](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_41.png)
+![image](https://user-images.githubusercontent.com/79617492/177680680-6eb60984-6a41-4216-a575-9b2354570764.png)
 
-##### 图2-162 SQL内容
+##### 图2-163 SQL内容
 
 j）输出组件
 
-用于输出单SQL组件【新增《秒杀表》】的执行结果，来判断是否新增秒杀活动记录成功，如图2-163、图2-164所示：
+用于输出单SQL组件【新增《秒杀表》】的执行结果，来判断是否新增秒杀活动记录成功，如图2-164、图2-165所示：
 
-![2-163](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_42.png)
+![image](https://user-images.githubusercontent.com/79617492/177680730-bf4cecd5-c18c-4011-b5b5-064390f933dc.png)
 
-##### 图2-163 输出结果组件
+##### 图2-164 输出结果组件
 
-![2-164](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_43.png)
+![image](https://user-images.githubusercontent.com/79617492/177680744-84e1f4f5-cd2e-474e-8b4c-1e086bfe1906.png)
 
-##### 图2-164 输出执行结果
+##### 图2-165 输出执行结果
 
 k）保存流程图
 
-流程图设计完成后，保存并退出窗体视图，如图2-165所示：
+流程图设计完成后，保存并退出窗体视图，如图2-166所示：
 
-![2-165](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_44.png)
+![image](https://user-images.githubusercontent.com/79617492/177680768-19960533-9485-4f1f-a374-721fd361bf87.png)
 
-##### 图2-165 保存并退出窗体视图
+##### 图2-166 保存并退出窗体视图
 
 l）提交并发布接口
 
-![2-166](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_45.png)
+![image](https://user-images.githubusercontent.com/79617492/177680785-7c768001-d7a9-47c3-aa4a-88721d4fbb86.png)
 
-##### 图2-166 提交并发布接口
+##### 图2-167 提交并发布接口
 
 m）测试用例
 
-m1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-167所示：
+m1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图2-168所示：
 
-![2-167](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_46.png)
+![image](https://user-images.githubusercontent.com/79617492/177680800-9468c8d4-166e-4738-ae03-24a3329153c7.png)
 
-##### 图2-167 进行测试用例
+##### 图2-168 进行测试用例
 
-m2）编辑测试用例，如图2-168所示：
+m2）编辑测试用例，如图2-169所示：
 
-![2-168](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_47.png)
+![image](https://user-images.githubusercontent.com/79617492/177680818-e0618bb2-05c3-4fae-a442-c72aae09db7c.png)
 
-##### 图2-168 编辑测试用例
+##### 图2-169 编辑测试用例
 
-m3）输入需新增的秒杀活动信息，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图2-169、图2-170所示：
+m3）输入需新增的秒杀活动信息，并启用可视化日志（便于查看接口流程中的数据流转），再单击执行即可，如图2-170、图2-171所示：
 
-![2-169](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_48.png)
+![image](https://user-images.githubusercontent.com/79617492/177680844-2ade42cf-f6f9-463b-8db6-f5fcee33e335.png)
 
-##### 图2-169 录入头部参数信息
+##### 图2-170 录入头部参数信息
 
-![2-170](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_49.png)
+![image](https://user-images.githubusercontent.com/79617492/177680855-9b96a471-e28b-440f-8b6c-740f4d67123e.png)
 
-##### 图2-170 录入body参数信息
+##### 图2-171 录入body参数信息
 
-m4）查看测试用例响应内容，同时查看数据库中的秒杀表seckill_buy是否新增秒杀活动记录成功，如图2-171、图2-172所示：
+m4）查看测试用例响应内容，同时查看数据库中的秒杀表seckill_buy是否新增秒杀活动记录成功，如图2-172、图2-173所示：
 
-![2-171](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_50.png)
+![image](https://user-images.githubusercontent.com/79617492/177680872-25bf010d-f769-4978-9f0b-3ad0ee201292.png)
 
-##### 图2-171 查看执行结果
+##### 图2-172 查看执行结果
 
-![2-172](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_51.png)
+![image](https://user-images.githubusercontent.com/79617492/177680891-ea49696d-f83d-4ff0-97f8-ae1eeb3d82ec.png)
 
-##### 图2-172 查看秒杀表
+##### 图2-173 查看秒杀表
 
-m5）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-173、图2-174、图2-175所示：
+m5）若测试用例的结果出现错误，可通过可视化日志双击查看各个组件的节点数据进行接口的调试，如图2-174、图2-175、图2-176所示：
 
-![2-173](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_52.png)
+![image](https://user-images.githubusercontent.com/79617492/177680913-37aea994-1849-4e22-bf70-5bedbdbf6348.png)
 
-##### 图2-173 单击可视化日志
+##### 图2-174 单击可视化日志
 
-![2-174](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_53.png)
+![image](https://user-images.githubusercontent.com/79617492/177680924-3fa13ea8-3a2c-40ca-9028-0d7f66fe6035.png)
 
-##### 图2-174 查看可视化日志
+##### 图2-175 查看可视化日志
 
-![2-175](https://www.feisuanyz.com/fsimage/alcj-image/miaosha/5_54.png)
+![image](https://user-images.githubusercontent.com/79617492/177680938-a08452f0-d5ba-40f9-93fe-4983f9d503cb.png)
 
-##### 图2-175 查看节点数据
+##### 图2-176 查看节点数据
