--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/1. 函数应用.md
@@ -8,13 +8,13 @@
 
 ##### 1.1.1 结果展示
 
-![1-1](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_18.png)
+![image](https://user-images.githubusercontent.com/79617492/177707113-555e617d-53a8-40f8-9c56-cd4133887a0f.png)
 
 ##### 图1-1 结果展示
 
 ##### 1.1.2 流程图设计概览
 
-![1-2](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177707518-20ad9350-fa31-4b94-8b0b-c90dc44fff3d.png)
 
 ##### 图1-2 流程图设计概览
 
@@ -22,19 +22,19 @@
 
 a）在全自动开发平台新增一个接口，填写接口的基本信息，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_12.png)
+![image](https://user-images.githubusercontent.com/79617492/177707552-63d2957d-7a9d-43b8-af53-33a226cd6e29.png)
 
 ##### 图1-3 填写接口信息
 
 b）配置接口的入口参数，即分别设置list对象（学生集合）和map对象（学生学号-学生姓名的键值对），如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_13.png)
+![image](https://user-images.githubusercontent.com/79617492/177710344-c7eba981-a340-477a-afaa-da1c817dae48.png)
 
 ##### 图1-4 配置入口参数
 
 c）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_13.png)
+![image](https://user-images.githubusercontent.com/79617492/177710358-8bb5ed39-5685-4f13-8669-a41487d69d43.png)
 
 ##### 图1-5 模型编辑
 
@@ -44,53 +44,53 @@ d1）单函数组件【初始化MAP】：用于初始化map对象，并往map对
 
 ##### 此处参数的填写key值和value值，先后对应。
 
-![1-6](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177710407-0048e1e6-2dd7-4e60-8e5a-ce1b885ba0cb.png)
 
 ##### 图1-6 单函数组件
 
-![1-7](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177710424-80dd8bc5-db08-41ec-ae18-083a2f17e85b.png)
 
 ##### 图1-7 用到的函数
 
-![1-8](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_4.png)
+![image](https://user-images.githubusercontent.com/79617492/177710452-1047dd58-a2c3-4a3e-8f0c-fa3321e483bf.png)
 
 ##### 图1-8 传入键值对参数
 
 d2）单函数组件【将MAP添加到list】:用于将map添加到list中。用到的函数是listAndValue(List fromList,Map addMap)，需传入list学生对象和初始化完成的map对象，其中list学生对象引用的是接口参数students，map对象引用的是单函数组件【初始化MAP】的执行结果，如图1-9、图1-10、图1-11所示：
  
-![1-9](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_5.png)
+![image](https://user-images.githubusercontent.com/79617492/177710483-3099db4e-12f1-4874-a27a-e211411bbd7a.png)
 
 ##### 图1-9 单函数组件
 
-![1-10](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_6.png)
+![image](https://user-images.githubusercontent.com/79617492/177711437-97fd1e50-e081-4f08-9548-93408b9257a0.png)
 
 ##### 图1-10 用到的函数
  
-![1-11](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_21.png)
+![image](https://user-images.githubusercontent.com/79617492/177711476-7b0eec43-c4d8-4e76-887d-7630e25a2993.png)
 
 ##### 图1-11 map对象引用的执行结果
 
 d3）单函数组件【对list进行排序】：用于把添加了map对象的list对象根据学生学号倒序排序。用到的函数是sort(List list,String column,String order)，需传入list对象、排序字段名以及排序类别参数，如图1-12、图1-13所示：
  
-![1-12](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_7.png)
+![image](https://user-images.githubusercontent.com/79617492/177711498-dd877cba-d4c8-4823-8d32-c53bc9ddb251.png)
 
 ##### 图1-12 单函数组件
  
-![1-13](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_8.png)
+![image](https://user-images.githubusercontent.com/79617492/177711524-d7fa85c4-9ba3-44e6-9a02-3c204e362c7f.png)
 
 ##### 图1-13 填写数据
 
 d4）输出结果组件：输出list对象倒序排序的结果，直接将list对象students输出即可，如图1-14、图1-15、图1-16所示：
  
-![1-14](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_9.png)
+![image](https://user-images.githubusercontent.com/79617492/177711583-ca45da27-0e3f-4168-a5f4-eac91312be4a.png)
 
 ##### 图1-14 输出结果
 
-![1-15](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_10.png)
+![image](https://user-images.githubusercontent.com/79617492/177711593-d1d51a8a-f878-4d69-b0a4-8a872cf3f858.png)
 
 ##### 图1-15 填写数据
 
-![1-16](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_11.png)
+![image](https://user-images.githubusercontent.com/79617492/177711607-d93ec3e2-3426-4501-949d-0f161118c70a.png)
 
 ##### 图1-16 将list对象students输出
 
@@ -100,27 +100,27 @@ f）提交并发布接口。
 
 g）编辑测试用例，录入map对象及list对象的参数值，并启用可视化日志，如图1-17、图1-18、图1-19所示：
  
-![1-17](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_15.png)
+![image](https://user-images.githubusercontent.com/79617492/177711989-cc7f7002-cc33-4b15-84e6-a22a70fc98b2.png)
 
 ##### 图1-17 编辑接口信息
 
-![1-18](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_16.png)
+![image](https://user-images.githubusercontent.com/79617492/177712012-97c06400-dbaf-4105-ac71-eed42bc2b31e.png)
 
 ##### 图1-18 编辑接口测试用例1
 
-![1-19](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_17.png)
+![image](https://user-images.githubusercontent.com/79617492/177712037-8445a097-b8b5-4b98-97eb-e460bc6d46ae.png)
 
 ##### 图1-19 编辑接口测试用例2
 
 h）执行测试用例，查看测试用例执行结果，可以看到list对象倒序显示的结果，如图1-20所示：
  
-![1-20](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_18.png)
+![image](https://user-images.githubusercontent.com/79617492/177712064-f0021d94-44a9-4568-9b11-252693766250.png)
 
 ##### 图1-20 查看执行结果
 
 i）查看可视化日志，如图1-21所示：
  
-![1-21](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/list_20.png)
+![image](https://user-images.githubusercontent.com/79617492/177712107-dc55b864-8173-4fc5-8f01-8d9dabe1e4cb.png)
 
 ##### 图1-21 查看可视化日志
 
@@ -132,7 +132,7 @@ i）查看可视化日志，如图1-21所示：
 
 ##### 1.2.1 流程图设计概览
 
-![1-22](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177712155-411695db-9aa6-422f-8371-800bc66a993f.png)
 
 ##### 图1-22 流程图设计
 
@@ -144,7 +144,7 @@ a）输入手机号；b）通过手机号的长度及手机号首位来判断手
 
 a）在全自动开发平台新增一个接口，填写接口的基本信息，如图1-23所示：
 
-![1-23](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177713049-1e4e7a31-88e0-4f1a-82f0-471387fc2376.png)
 
 ##### 图1-23 填写基本信息
 
@@ -152,17 +152,17 @@ b）配置接口的入口参数。
 
 此处添加了手机号参数，用于程序开头录入手机号。（字段名称：mobileNo；字段类型：String），如图1-24所示：
 
-![1-24](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177713069-e9cc50a0-e31f-407e-9a74-1840a19ee1d2.png)
 
 ##### 图1-24 配置入口参数
 
 c）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），如图1-25、图1-26所示：
 
-![1-25](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_4.png)
+![image](https://user-images.githubusercontent.com/79617492/177713095-3b5be8ab-0b1a-4b78-b83f-de2fdf6e8e80.png)
 
 ##### 图1-25 进入模型编辑
 
-![1-26](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_5.png)
+![image](https://user-images.githubusercontent.com/79617492/177713109-c22ba1a6-2c89-45bd-8980-6979dcd68545.png)
 
 ##### 图1-26 进行模型编辑
 
